# customer-liability-recon

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  daily-reconciliation.yml
config/: wallets.yaml
data/: customer_ledger.csv  price_snapshots.csv
docs/: architecture.html  architecture.md  index.html
notebooks/: walkthrough.ipynb
output/: recon_2026-05-06.html  recon_2026-05-06.xlsx  recon_2026-05-07.html  recon_2026-05-07.xlsx  recon_2026-05-08.html  recon_2026-05-08.xlsx  recon_2026-05-09.html  recon_2026-05-09.xlsx  recon_2026-05-10.html  recon_2026-05-10.xlsx  recon_2026-05-11.html  recon_2026-05-11.xlsx  recon_2026-05-12.html  recon_2026-05-12.xlsx  recon_2026-05-13.html  recon_2026-05-13.xlsx  recon_2026-05-14.html  recon_2026-05-14.xlsx  recon_2026-05-15.html  recon_2026-05-15.xlsx  recon_2026-05-16.html  recon_2026-05-16.xlsx  recon_2026-05-17.html  recon_2026-05-17.xlsx  recon_2026-05-18.html  recon_2026-05-18.xlsx  recon_2026-05-19.html  recon_2026-05-19.xlsx  recon_2026-05-20.html  recon_2026-05-20.xlsx  recon_2026-05-21.html  recon_2026-05-21.xlsx  recon_2026-05-22.html  recon_2026-05-22.xlsx  recon_2026-05-23.html  recon_2026-05-23.xlsx  recon_2026-05-24.html  recon_2026-05-24.xlsx  recon_2026-05-25.html  recon_2026-05-25.xlsx  (+118 more)
src/: __init__.py  cache.py  chain.py  cli.py  ledger.py  prices.py  reconcile.py  report.py
src/sql/: liability_summary.sql
tests/: conftest.py  test_cache.py  test_chain.py  test_ledger.py  test_reconcile.py  test_report.py
(+3 files in other folders)
