[project]
name = "customer-liability-recon"
version = "0.1.0"
description = "Portfolio demonstration for customer liability reserve coverage reconciliation."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "duckdb>=1.0",
  "requests>=2.32",
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "openpyxl>=3.1",
  "python-dateutil>=2.9",
  "tenacity>=8.2",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.12",
  "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

